--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.3",
+    "@geoapify/geocoder-autocomplete": "^1.5.1",
+    "@geoapify/react-geocoder-autocomplete": "^1.5.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/autosuggest-highlight": "^3.2.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.37",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "autosuggest-highlight": "^3.3.4",
+    "axios": "^0.27.2",
     "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
