--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,19 @@
 {
   "name": "supplier-upload",
   "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "RESTful API with Node.js, Express, and Firebase",
+  "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
-    "multer": "^1.4.5-lts.1"
+    "pg": "^8.11.1"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   },
   "devDependencies": {
-    "@babel/helper-compilation-targets": "^7.22.5",
     "nodemon": "^2.0.22"
   }
 }
